# liblsqecc

./: .gitattributes  .gitignore  .gitmodules  10_by_10_layout.txt  CMakeLists.txt  LICENSE  README.md  routing_test.lsi  routing_test_instructions.lsi  routing_test_instructions.txt  small_layout.txt  test_layout.txt  test_ls_instructions.txt
.github/workflows/: build_and_test.yml  bump-version.yml  bump_version.yml  draft_release.yml  emscripten_build.yml  release.yml  skip_checks.yml
benchmarking/: layout_80x80.txt  plot_random_slicer_benchmark.py  random_slicer_benchmark.ipynb  random_slicer_benchmark.py  requirements.txt
examples/: 100qubits.json  7qubits.json  ManyQubits.json  PatchesJoin.json  README.md  TGate.json  TgateInstructions.txt  core2qubitslayout.txt  core4by4layout.txt  instructions7qubits.txt  minimal_layout.json  minimal_layout.lsi  minimal_layout.txt  pandora_layout_fh2.txt  paperDemo.txt  parallelize_instructions.json  parallelize_instructions.lsi  useManyQubits.txt
examples/3d_crossings/: crossings.layout  crossings_0.json  crossings_0.lli  crossings_1.lli  crossings_2.json  crossings_2.lli  crossings_3.json  crossings_3.lli  crossings_3d_1.json  crossings_3d_2.json  crossings_3d_3.json  crossings_3d_4.json  crossings_3d_5.json  crossings_3d_6.json  crossings_3d_7.json  crossings_3d_8.json  crossings_4.json  crossings_4.lli  crossings_5.json  crossings_5.lli  crossings_6.json  crossings_6.lli  crossings_7.json  crossings_7.lli  crossings_8.lli  crossings_dag_2.json  crossings_dag_3.json  crossings_dag_4.json  crossings_dag_5.json  crossings_dag_6.json  crossings_dag_7.json  crossings_dag_8.json  run.sh
examples/difficult_routing/: instructions.lli  layout.txt  out.json
examples/qasm/: ZXCNOTDemo.qasm  compact_layout_demo.qasm  end_to_end.qasm
examples/random_lli_good_parallelism/: 1000x10.lli  10qubits.txt
include/lsqecc/dag/: commutation_trait.hpp  dependency_dag.hpp  directed_graph.hpp  domain_dags.hpp
include/lsqecc/dependency_dag/: dag_passes.hpp  dag_printer.hpp  dependency_dag.hpp  gates_dag.hpp  lli_dag.hpp
include/lsqecc/gates/: clifford_plus_t_conversion_stream.hpp  decompose_rotation_stream.hpp  gate_approximator.hpp  gates.hpp  parse_gates.hpp  pi_over_2_to_the_n_rz_gate_approximations.hpp  postgres_gate_stream.hpp
include/lsqecc/layout/: ascii_layout_spec.hpp  layout.hpp  parse_layout_spec.hpp  router.hpp  searchable_slice.hpp
include/lsqecc/logical_lattice_ops/: logical_lattice_ops.hpp  ls_instructions_parse.hpp  parse_utils.hpp
include/lsqecc/ls_instructions/: boundary_rotation_injection_stream.hpp  catalytic_s_gate_injection_stream.hpp  from_gates.hpp  id_generator.hpp  local_instructions.hpp  ls_instruction_stream.hpp  ls_instructions.hpp  ls_instructions_from_gates.hpp  ls_instructions_parse.hpp  parse_utils.hpp  teleported_s_gate_injection_stream.hpp
include/lsqecc/patches/: dense_patch_computation.hpp  dense_slice.hpp  fast_patch_computation.hpp  minetest_export.hpp  patch_computation.hpp  patch_computation_result.hpp  patches.hpp  routing.hpp  slice.hpp  slice_stats.hpp  slice_variant.hpp  slices_to_json.hpp  slices_to_text.hpp  sparse_patch_computation.hpp  sparse_slice.hpp  voxel_slicing.hpp
include/lsqecc/pauli_rotations/: pauli_operator.hpp
include/lsqecc/pipelines/: slicer.hpp
include/lsqecc/scheduler/: wave_scheduler.hpp
include/lstk/: lstk.hpp
include/pqpp/: pq.hpp
npm/: .gitignore  .npmignore  .prettierrc  README.md  RELEASE.md  index.js  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
npm/lib/: core.js
npm/src/: index.d.ts  index.js  index.ts  slices.ts
npm/tests/: index.test.js  index.test.ts
regression_tests/: README.md  count.json  out2.json  spec  suite.py  test.json
regression_tests/cases/: help.case.sh  help.spec  help.spec.new
regression_tests/cases/approximation/: crz.case.sh  crz.case.sh.off  rz.case.sh.off  rz.spec
regression_tests/cases/bellbased/: 1.case.sh  1.spec  2.case.sh  2.json  2.new.json  2.spec  2.spec.new  3.case.sh  3.json  3.new.json  3.spec  3.spec.new  4.case.sh  4.json  4.spec  4.spec.new  5.case.sh  5.spec  6.case.sh  6.json  6.spec  6.spec.new  7.case.sh  7.json  7.spec
regression_tests/cases/catalytic_s_gates/: 1.case.sh  1.spec  10.case.sh  10.spec  10.spec.new  11.case.sh  11.json  11.spec  12.case.sh  12.spec  12.spec.new  13.case.sh  13.json  13.new.json  13.spec  13.spec.new  2.case.sh  2.spec  3.case.sh  3.json  3.spec  4.case.sh  4.spec  5.case.sh  5.json  5.spec  6.case.sh  6.spec  6.spec.new  (+8 more)
src/: emscripten_bindings.cpp  lsqecc_slicer_main.cpp  lsqecclib_pybind.cpp  main.cpp  pgdb_slicer_main.cpp  slicer.cpp
src/dag/: directed_graph.cpp  domain_dags.cpp
src/dependency_dag/: dependency_dag.cpp  gates_dag.cpp  lli_dag.cpp
src/gates/: clifford_plus_t_conversion_stream.cpp  decompose_rotation_stream.cpp  gate_approximator.cpp  gates.cpp  parse_gates.cpp  postgres_gate_stream.cpp
src/layout/: ascii_layout_spec.cpp  layout.cpp  parse_layout_spec.cpp  router.cpp
src/logical_lattice_ops/: logical_lattice_ops.cpp  ls_instructions_parse.cpp  parse_utils.cpp
src/ls_instructions/: boundary_rotation_injection_stream.cpp  catalytic_s_gate_injection_stream.cpp  local_instructions.cpp  ls_instruction_stream.cpp  ls_instructions.cpp  ls_instructions_from_gates.cpp  ls_instructions_parse.cpp  parse_utils.cpp  teleported_s_gate_injection_stream.cpp
src/patches/: dense_patch_computation.cpp  dense_slice.cpp  fast_patch_computation.cpp  minetest_export.cpp  patch_computation.cpp  patches.cpp  routing.cpp  slice.cpp  slice_stats.cpp  slices_to_json.cpp  slices_to_text.cpp  sparse_patch_computation.cpp  sparse_slice.cpp  voxel_slicing.cpp
src/pipelines/: slicer.cpp
src/scheduler/: wave_scheduler.cpp
tests/dag/: dependency_dag.cpp  directed_graph.cpp  domain_dags.cpp
tests/gates/: gate_approximator.cpp  parse_gates.cpp
tests/logical_lattice_ops/: logical_lattice_ops.cpp  ls_instructions.cpp  ls_instructions_parse.cpp
tests/lstk/: lstk.cpp
tests/patches/: dense_slice.cpp  fast_patch_computation.cpp
(+218 files in other folders)
